--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,5 @@
 name: CI
-on: { push: { branches: [master] } }
+on: { push: { branches: [main] } }
 jobs:
   build_linux_android_windows:
     runs-on: ubuntu-latest
