Added more architectures.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,8 +17,9 @@ jobs:
         run: git submodule update --init --depth=1
       - name: Build Linux & Windows
         run: |
-          sudo apt-get install mingw-w64
+          sudo apt-get install mingw-w64 gcc-11-aarch64-linux-gnu
           ./build.sh clean && BIN=cjson.x86_64-linux.so ./build.sh
+          ./build.sh clean && BIN=cjson.aarch64-linux.so CC=aarch64-linux-gnu-gcc-11 ./build.sh
           ./build.sh clean && BIN=cjson.x86_64-windows.dll CC=x86_64-w64-mingw32-gcc ./build.sh
       - name: Create Release(s)
         env: { GITHUB_TOKEN: "${{ github.token }}" }
